2009-04-10 delx
	* Revert to old force screen update behaviour for 10.4
	* Fix overwriting of static window titles (#2744363)
	* Fixed a bug when pasting more than 1024 characters of text
	* Rewrote bits of PTYTask

2009-04-07 delx
	* Fixed non-Monaco font drawing
	* Fixed regression, default bg color was drawn over background image
	* Don't position windows in the dock area
	* Save last window position and reopen first window in that location

2009-04-07 ujwal
	* Fixed crash on quitting.

2009-03-28 delx
	* Guaranteed restoration of old window position upon exiting fullscreen

2009-03-23 delx
	* Smarter placement of new terminal windows. It is aware of multiple
	  monitors as well as workspaces (Spaces). Windows are positioned on
	  screen so they have the smallest overlap with any other window.

2009-03-20 delx
	* charWidth is now set with ceil() rather than being truncated. This
	  should make wider characters fit correctly.
	* If char j on a line is dirty, force redraw of j+1 also. This ensures
	  that any subpixel rendering that is done does not leave trails on the
	  next character.

2009-03-16 delx
	* The cursor is now double-width when over a double-width character.
	* Fixed selection of wide chars after breaking it on 2009-03-13

2009-03-13  delx
	* Remove character caching code. Testing shows the drawing to run just
	  as fast without it. This reduces code complexity and colour reproduction
	  bug that was triggered by changing OSX's ColorSync calibration profiles,
	  eg when switching to a new monitor. It also makes operations that would
	  previously have required clearing the cache happen faster.
	* Fixed high density background colors:
	  $ echo -ne '\e[46m LD \e[106m HI \e[00m\n'
	* Refactored the selection handling. It no longer touches VT100Screen,
	  instead keeping a copy of the start & end points of the current and last
	  drawn selection. This saves [PTYTextView drawRect] from having to treat
	  all characters in the scrollback buffer as dirty.